--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-tittle">About Me</h1> 
-                    <p>Hello my name is Singgih! an ungraduate information technology student in Udayana Univerity.
+                    <p class="rata">Hello my name is Singgih! an ungraduate information technology student in Udayana Univerity.
                         Im 20 Years old and I really passionate in leadership program such as joining commite, build some community, and being a leader in some project. 
                         Also, i really passionate in IT's Industry, discussing about Technology, social and global tech improvement issues.
                     </p>
-
+                    <hr>
                     <div class="tab-tittles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -51,22 +51,24 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Web/Design</span><br> Web Design/Web Developer</li>
-                            <li><span>Web Design</span><br> Web App Designing</li>
+                            <li><span>UI/UX Designer</span><br> Mobile App & Web App Designing</li>
+                            <li><span>Mobile Developer</span><br> Android Developing</li>
                             <li><span>Web Developer</span><br> Web App Developing</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2023 - Current</span><br> Team Leader in NLP Project "Lazada Sentiment Analysis"</li>
-                            <li><span>2023</span><br> Vice Project Officer in Training Legislative 2023</li>
+                            <li><span>2023 - Current</span><br> Team Leader in NLP Project "Sentiment Analysis of Lazada Review"</li>
+                            <li><span>2023</span><br> Vice Project Officer in Training Legislative 2023 Event</li>
+                            <li><span>2022</span><br> 3D Division Staff in Pilmapres TI 2022 Event</li>
                             <li><span>2021</span><br> Master of Ceremony in Information Technology Creative Competition</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2021 - Current</span><br> Information Technology at Udayana Univerity</li>
-                            <li><span>2018 - 2021</span><br> SMA N 4 Denpasar, Bali</li>
+                            <li><span>2021 - Current</span><br> Information Technology Engineering at Udayana Univerity, Bali</li>
+                            <li><span>2018 - 2021</span><br> SMAN 4 Denpasar, Bali</li>
+                            <li><span>2015 - 2018</span><br> SMP Harapan Nusantara Denpasar, Bali</li>
                         </ul>
                     </div>
             </div>
@@ -80,21 +82,21 @@
         <h1 class="sub-tittle">My Services</h1> 
         <div class="services-list">
              <div>
-                <i class="fa-brands fa-html5 fa-beat fa-2xl" style="color: #ff9500;"></i><br><br>
+                <i class="fa-brands fa-html5 fa-beat fa-2xl" style="color: #ff9500;"></i>
                 <h2>Web Developer</h2>
-                <P>lorem ipsum dolor sit amet</P>
+                <P class="rata">I'm proficient in the field of web development. I have 2 years of experience as a frontend developer.</P><br>
                 <a href="#">Learn more</a>
             </div>
             <div>
-                <i class="fa-brands fa-python fa-spin fa-2xl" style="color: #e0ce00;"></i><br><br>
+                <i class="fa-brands fa-python fa-spin fa-2xl" style="color: #eedb05;"></i>
                 <h2>Web Hack</h2>
-                <P>lorem ipsum dolor sit amet</P>
+                <P class="rata">Besides that, I am also very interested in Python programming language because it's fundamental in modern programming languange.</P>
                 <a href="#">Learn more</a>
             </div>
             <div>
-                <i class="fa-brands fa-figma fa-beat fa-2xl" style="color: #1a5dd1;"></i>
+                <i class="fa-brands fa-figma fa-beat fa-2xl" style="color: #0e1aca;"></i>
                 <h2>Web Design</h2>
-                <P>lorem ipsum dolor sit amet</P>
+                <P class="rata">I am also skilled in the field of web designing. UI/UX is second nature to me.</P><br>
                 <a href="#">Learn more</a>
             </div>
         </div>
