--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2023 - Current</span><br> Team Leader in NLP Project "Sentiment Analysis of Lazada Review"</li>
+                            <li><span>2023 - Current</span><br> Team Leader in NLP Project "QnA Website using Roberta-Base Model"</li>
+                            <li><span>2023</span><br> Team Leader in NLP Project "Sentiment Analysis of Lazada Review"</li>
                             <li><span>2023</span><br> Vice Project Officer in Training Legislative 2023 Event</li>
                             <li><span>2022</span><br> 3D Division Staff in Pilmapres TI 2022 Event</li>
                             <li><span>2021</span><br> Master of Ceremony in Information Technology Creative Competition</li>
@@ -84,20 +85,17 @@
              <div>
                 <i class="fa-brands fa-html5 fa-beat fa-2xl" style="color: #ff9500;"></i>
                 <h2>Web Developer</h2>
-                <P class="rata">I'm proficient in the field of web development. I have 2 years of experience as a frontend developer.</P><br>
-                <a href="#">Learn more</a>
+                <P class="rata">I'm proficient in the field of web development. I have 2 years of experience as a frontend developer (React.js, Html, Css, Js, PHP).</P><br>
             </div>
             <div>
                 <i class="fa-brands fa-python fa-spin fa-2xl" style="color: #eedb05;"></i>
-                <h2>Web Hack</h2>
+                <h2>NLP</h2>
                 <P class="rata">Besides that, I am also very interested in Python programming language because it's fundamental in modern programming languange.</P>
-                <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-brands fa-figma fa-beat fa-2xl" style="color: #0e1aca;"></i>
                 <h2>Web Design</h2>
                 <P class="rata">I am also skilled in the field of web designing. UI/UX is second nature to me.</P><br>
-                <a href="#">Learn more</a>
             </div>
         </div>
     </div>
@@ -112,29 +110,31 @@
             <div class="work">
                 <img src="images/work.png">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>ini sosmed</p>
+                    <h3 style="color: rgb(0, 0, 0);">My Portofolio Media</h3>
+                    <p>Website ini berisi portofolio singkat yang sedang anda buka</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square fa-flip" style="color: #ffffff;"></i></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work.png">
+                <img src="images/Yvidn Bot.png">
                 <div class="layer">
-                    <h3>Website App</h3>
-                    <p>ini website bro</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square fa-flip" style="color: #ffffff;"></i></i></a>
+                    <h3 style="color: rgb(0, 0, 0);">QnA Web</h3>
+                    <p style="color: #000000;">YourvoiceIdn adalah website informatif yang berisi tentang topik human rights, social movement, dan CSE, pada website ini juga menerapkan NLP dengan model Roberta-base</p>
+                    <a href="https://github.com/ratubgss/Roberta-base-QnA"><i class="fa-solid fa-arrow-up-right-from-square fa-flip" style="color: #ffffff;"></i></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work.png">
+                <img src="images/Lazada Sentimen On Gplay.png">
                 <div class="layer">
-                    <h3>Web Hacking</h3>
-                    <p>ini web hack</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square fa-flip" style="color: #ffffff;"></i></i></a>
+                    <h3 style="color: rgb(0, 0, 0);">Lazada Sentiment Analysis</h3>
+                    <p>Sentiment analysis of lazada application on Google Play Comment</p>
+                    <a href="https://github.com/ratubgss/Classification-of-Lazada-Application-Review-Indonesian-Languange"><i class="fa-solid fa-arrow-up-right-from-square fa-flip" style="color: #ffffff;"></i></i></a>
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <!--<a href="#" class="btn">See more</a-->
+        <br><br><br>   
+        <br><br><br>
     </div>
 </div>
 <!--------contact--------->
@@ -150,7 +150,7 @@
                         <a href="https://wa.me/6281353743370?text=Hello%20fellas!!%20"><i class="fa-brands fa-whatsapp fa-beat" style="color: #0cac2c;"></i></a>
                         <a href="https://www.linkedin.com/in/ratu-bagus-920936257/"><i class="fa-brands fa-linkedin-in fa-beat" style="color: #4d8eff;"></i></a>
                     </div>
-                    <a href="https://drive.google.com/file/d/1cw_wlxnyL37OxY0VMn5xARuXA2nAWanY/view?usp=share_link" download class="btn btn2">See CV</a>
+                    <a href="https://drive.google.com/file/d/1yWDf09k6vbMcYGCl_tlaqbzAb4CTIMRp/view?usp=sharing" target="_blank" class="btn btn2" download>See CV</a>
             </div>
                 <div class="contact-right">
                 <form name="submit-to-google-sheet">
@@ -197,7 +197,7 @@
 </script>
 
 <script>
-    const scriptURL = '<https://script.google.com/macros/s/AKfycbxgM6PyGuuenHCs9rZkg-gnSUYKypk6XVBhYmi4I8I0IGP3vusocmTPqUxSxEpd2e80/exec>'
+    const scriptURL = '<https://colab.research.google.com/drive/10L7Xkt_xMHc5ppqn8u0_xni17a8T5HGi?hl=id#scrollTo=eba6-o_Uk-uy">'
     const form = document.forms['submit-to-google-sheet']
     const msh = document.getElementById("msg")
   
