--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" onclick="opentab('project')">Project</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
@@ -58,8 +59,6 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2023 - Current</span><br> Team Leader in NLP Project "QnA Website using Roberta-Base Model"</li>
-                            <li><span>2023</span><br> Team Leader in NLP Project "Sentiment Analysis of Lazada Review"</li>
                             <li><span>2023</span><br> Vice Project Officer in Training Legislative 2023 Event</li>
                             <li><span>2022</span><br> 3D Division Staff in Pilmapres TI 2022 Event</li>
                             <li><span>2021</span><br> Master of Ceremony in Information Technology Creative Competition</li>
@@ -70,6 +69,13 @@
                             <li><span>2021 - Current</span><br> Information Technology Engineering at Udayana Univerity, Bali</li>
                             <li><span>2018 - 2021</span><br> SMAN 4 Denpasar, Bali</li>
                             <li><span>2015 - 2018</span><br> SMP Harapan Nusantara Denpasar, Bali</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="project">
+                        <ul>
+                            <li><span>2023</span><br> Team Leader in NLP Project "Sentiment Analysis of Lazada Review"</li>
+                            <li><span>2023</span><br> Frontend React.js in NLP Project "QnA Website using Roberta-Base Model"</li>
+                            <li><span>2023</span><br> Team Leader in Immersive Technology Project "Fruit Education Game For Kids"</li>
                         </ul>
                     </div>
             </div>
@@ -95,7 +101,7 @@
             <div>
                 <i class="fa-brands fa-figma fa-beat fa-2xl" style="color: #0e1aca;"></i>
                 <h2>Web Design</h2>
-                <P class="rata">I am also skilled in the field of web designing. UI/UX is second nature to me.</P><br>
+                <P class="rata">I am also skilled in the field of web designing using Figma. UI/UX is second nature to me.</P><br>
             </div>
         </div>
     </div>
@@ -108,10 +114,10 @@
         <h1 class="sub-tittle">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work.png">
+                <img src="images/Unity Game.png">
                 <div class="layer">
-                    <h3 style="color: rgb(0, 0, 0);">My Portofolio Media</h3>
-                    <p>Website ini berisi portofolio singkat yang sedang anda buka</p>
+                    <h3 style="color: rgb(0, 0, 0);">Unity Game Edu Fruity</h3>
+                    <p>Game ini merupakan tugas akhir dari matakuliah teknologi imersif. Game ini dibuat dengan menggabungkan beberapa skil yakni design 3d dengan blender, serta menggunakan C# sebagai script di dalam gamenya.</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square fa-flip" style="color: #ffffff;"></i></i></a>
                 </div>
             </div>
@@ -124,10 +130,10 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/Lazada Sentimen On Gplay.png">
+                <img src="images/Lazada Sentiment.png">
                 <div class="layer">
                     <h3 style="color: rgb(0, 0, 0);">Lazada Sentiment Analysis</h3>
-                    <p>Sentiment analysis of lazada application on Google Play Comment</p>
+                    <p>Sentiment analysis of lazada application on Google Play Comment. Menggunakan Python sebagai bahsa pemrograman untuk membuat program analisis sentiment.</p>
                     <a href="https://github.com/ratubgss/Classification-of-Lazada-Application-Review-Indonesian-Languange"><i class="fa-solid fa-arrow-up-right-from-square fa-flip" style="color: #ffffff;"></i></i></a>
                 </div>
             </div>
